# distill

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.base.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd-template.yml  ci.yml
.husky/: pre-commit
docs/: security.md
gateway/: Dockerfile  package.json  tsconfig.json
gateway/src/: server.ts
gateway/tests/: server.test.ts  setup.ts
scripts/: scaffold-service.sh
services/extraction-service/: CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
services/extraction-service/alembic/: env.py
services/extraction-service/alembic/versions/: 3f0a29436b5e_init.py
services/extraction-service/app/: main.py
services/extraction-service/app/agents/: classifier.py
services/extraction-service/app/application/dto/: classification_result.py  extraction_result.py  section.py
services/extraction-service/app/application/ports/: ai_provider.py
services/extraction-service/app/domain/entities/: __init__.py  extraction.py  financial_data.py
services/extraction-service/app/domain/events/: __init__.py  extraction_completed.py
services/extraction-service/app/infrastructure/ai/: anthropic_provider.py  gemini_provider.py  openai_provider.py  provider_factory.py
services/extraction-service/app/infrastructure/persistence/: database.py  models.py  sqlalchemy_repo.py
services/extraction-service/app/prompts/: classify.txt
services/extraction-service/tests/: conftest.py
web/: index.html  package.json  tailwind.config.js
(+213 files in other folders)
